[project]
name = "synapse-tools"
version = "0.1.0"
description = "Collection of misc tools for working with Synapse"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[project.scripts]
upload_file = "upload_file:main"
download_file = "download_file:main"
